--- a/cs/prace.tex
+++ b/cs/prace.tex
@@ -68,7 +68,7 @@
 \usepackage{paralist}       % lepší enumerate a itemize
 \usepackage{xcolor}         % barevná sazba
 
-\usepackage{listings}
+%\usepackage{listings}
 
 \usepackage{hyperref}
 \usepackage[none]{hyphenat}
